# Wemod-Patcher

.github/: FUNDING.yml
WeModPatcher/: Constants.cs  Program.cs  WeModPatcher.csproj
WeModPatcher/Core/: Patcher.cs  RuntimePatcher.cs  StaticPatcher.cs
WeModPatcher/Models/: PatchConfig.cs  Signature.cs
WeModPatcher/Properties/: AssemblyInfo.cs
WeModPatcher/Utils/: Extensions.cs
WeModPatcher/View/MainWindow/: MainWindowVm.cs
WeModPatcher/View/Popups/: PatchVectorsPopup.xaml  PatchVectorsPopup.xaml.cs  UpdatePopup.xaml  UpdatePopup.xaml.cs
tools/asar-fuses-bypass/: .gitignore  CMakeLists.txt  library.c
